# management-customer

./: .env.sample  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/: __init__.py  auth.py  config.py  context_process.py  exceptions.py  models.py  routes.py  services.py  utils.py  validators.py
app/routers/v1/: __init__.py  auth_router.py  main_router.py
migrations/versions/: ce3f81cec8ee_.py
static/assets/css/: auth.css  complaint-detail.css  complaints.css  dashboard.css  login.css  register.css  templatemo-chain-app-dev.css
static/assets/js/: custom.js
templates/: base.html  index.html
templates/auth/: login.html  register.html
templates/complaints/: complaint-detail.html  create.html
templates/customer/: dashboard.html
templates/includes/: footer.html  header.html
